Fix creating task with empty string. Add shift+enter combination for text wrapping. Increase bottom padding. Add mock test for coverage monitoring

--- a/src/components/CreateForm/CreateForm.scss
+++ b/src/components/CreateForm/CreateForm.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 rem(-1) rem(10) 0 rgba(0, 0, 0, 0.15);
   display: flex;
   left: 0;
-  padding: rem(2);
+  padding: rem(2) rem(2) rem(6);
   position: fixed;
   width: 100%;
 
